--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -1,3 +1,6 @@
-<h1>Hello, World!</h1>
+{% extends "base.html" %}
 
-Testing
+{% block page_content %}
+    <h1>Hello, World!</h1>
+    Testing...
+{% endblock page_content %}
