Implement a mock polisher with working frontend

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -6,17 +6,21 @@
 <h1>pollish</h1>
 
 <!-- Login Button -->
+<!--
 <button type="button" class="btn btn-primary">Login</button>
+-->
 
 <!-- Upload Files Button -->
+<!--
 <label class="btn btn-secondary">
     Upload Files
     <input type="file" style="display: none;">
 </label>
+-->
 
 <!-- Text Edit Field -->
 <div class="form-group">
-    <label for="textEdit">Text Edit Field</label>
+    <label for="textEdit">Type some text below. Press <kbd>CTRL</kbd> + <kbd>.</kbd> to polish the last sentence in realtime.</label>
     <textarea class="form-control" id="textEdit" rows="5"></textarea>
 </div>
 
